--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,18 @@
     <link rel="stylesheet" href="/styles/main.css" type="text/css">
     <script src="https://kit.fontawesome.com/5421ecffc6.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        var trackingCode = "<%= services.ga %>";
+        ga('create', trackingCode, 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
 </head>
 <body>
     <!-- NAVBAR -->
